--- a/style.css
+++ b/style.css
@@ -1,8 +1,13 @@
 .wrapper {
     width: 100%;
+    height: 100%;
     max-width: 1400px;
     margin-left: 50%;
     transform: translateX(-50%);
+}
+
+h1, h3 {
+    font-family: "Roboto", sans-serif;
 }
 
 nav {
@@ -11,6 +16,7 @@ nav {
     width: 100%;
     background-color: rgba(21, 50, 67, 0.5);
     font-family: "Roboto", sans-serif;
+    z-index: 1000;
 }
 
 nav .wrapper {
@@ -75,4 +81,39 @@ nav #menu ol li:hover {
 nav #menu ol li:hover ol li {
     display: block;
 }
+
+header {
+    position: relative;
+    top: 0;
+    height: 600px;
+    background-color:black;
+    width: 100%;
+    background-image: url(headerbg.jpg);
+}
+
+#header-content {
+    position: absolute;
+    left: 150px;
+    top: 50%;
+    transform: translateY(-50%);
+}
+
+#header-content h1, h3 {
+    margin: 0;
+}
+
+#header-content h1 {
+    color: rgba(241, 136, 5, 1);
+    font-size: 60pt;
+}
+
+#header-content h3 {
+    color: #ffffff;
+    font-size: 20pt;
+    font-weight: 400;
+    font-family: "Opens Sans", sans-serif;
+    font-style: italic;
+}
+
+
 
