--- a/style.css
+++ b/style.css
@@ -2,9 +2,12 @@ body, html {
     background-color: #eee;
 }
 
+body>*:not(header):not(footer):not(nav) {
+    margin-bottom: 60px;
+}
+
 .wrapper {
     width: 100%;
-    height: 100%;
     max-width: 1400px;
     margin-left: 50%;
     transform: translateX(-50%);
@@ -12,6 +15,17 @@ body, html {
 
 h1, h3 {
     font-family: "Roboto", sans-serif;
+}
+
+h3 {
+    margin: 0;
+    padding: 20px 0px 20px 30px;
+}
+
+.card {
+    background: #fff;
+    border-radius: 2px;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
 nav {
@@ -95,8 +109,12 @@ header {
 }
 
 #contact {
-    height: 100px;
+    height: 50px;
     background-color: #95a5a6;
+}
+
+#over-ons .card {
+    height: 300px;
 }
 
 /* footer {
