--- a/style.css
+++ b/style.css
@@ -2,54 +2,6 @@ body, html {
     background-color: #eee;
 }
 
-body>*:not(header):not(footer):not(nav) {
-    margin-bottom: 60px;
-}
-
-.wrapper {
-    width: 95%;
-    max-width: 1200px;
-    height: inherit;
-    margin: 0 auto;
-    position: relative;
-}
-
-.row {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-}
-
-.row > div {
-    padding: 4px;
-    box-sizing: border-box; 
-}
-
-.row-4 > *{
-    width: 25%;
-}
-
-.row-3 > *{
-    width: 33.333%;
-}
-
-h* {
-    font-family: "Roboto", sans-serif;
-}
-
-p, a, span {
-    font-family: "Open Sans", sans-serif
-}
-
-a{
-    text-decoration: none;
-}
-
-h3 {
-    margin: 0;
-    padding: 20px 0px 20px 30px;
-}
-
 .card {
     background: #fff;
     border-radius: 2px;
@@ -62,6 +14,7 @@ nav {
     font-family: "Roboto", sans-serif;
     z-index: 1000;
     height: 80px;
+    background-color: #FCFDFD ;
 }
 
 nav .wrapper {
@@ -77,7 +30,7 @@ nav #logo i{
     position: relative;      
     top: 50%;
     transform: translateY(-50%);
-    color: white;
+    color: #2D2E32;
     font-size: 30px;
 }
 
@@ -92,12 +45,13 @@ nav #menu ol {
 nav #menu > ol > li {
     height: inherit;
     position: relative;
+    box-sizing: border-box;
 }
 
 nav #menu a {
     display: block;
     text-decoration: none;
-    color: #FFFFFF;
+    color: #2D2E32;
 }
 
 nav #menu > ol > li > a {
@@ -112,15 +66,20 @@ nav #menu ol ol {
     flex-direction: column;
     height: auto;
     display: none;    
-    background-color: #7f8c8d;
+    background-color: #FCFDFD;
+    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
 
 nav #menu ol ol a {
-    padding: 10px 10px 10px 20px;
+    padding: 10px 20px;
 }
 
-nav #menu > ol li:hover {
-    background-color: #BBBEBE;
+nav #menu > ol > li:hover {
+    border-bottom: 2px solid #4F59A6;
+}
+
+nav #menu ol ol li:hover a {
+    color: #4F59A6;
 }
 
 nav #menu ol li:hover ol{
