--- a/bikenation.css
+++ b/bikenation.css
@@ -32,16 +32,14 @@ body>*:not(footer):not(nav) {
 h1 {
     font-family: "Roboto", sans-serif;
     font-weight: 700;
-    font-size: 30pt;
 }
 
-h3 {
+h2 {
     font-family: "Raleway", sans-serif;
     font-weight: normal;
-    font-size: 25px;
 }
 
-h1, h3 {
+h1, h2 {
     margin: 0;
     margin-bottom: 20px;
 }
@@ -59,4 +57,88 @@ p + p {
 
 a{
     text-decoration: none;
+}
+
+.card {
+    background: #fff;
+    border-radius: 2px;
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
+}
+
+nav {
+    position: absolute;
+    width: 100%;
+    font-family: "Roboto", sans-serif;
+    z-index: 1000;
+    height: 80px;
+    background-color: #FCFDFD;
+}
+
+nav .wrapper {
+    display: flex;
+    justify-content: space-between;
+}
+
+nav #menu {
+    height: inherit;
+}
+
+nav #logo i {
+    position: relative;
+    top: 50%;
+    transform: translateY(-50%);
+    color: #2D2E32;
+    font-size: 30px;
+}
+
+nav #menu ol {
+    list-style: none;
+    padding: 0;
+    margin: 0;
+    display: flex;
+    height: inherit;
+}
+
+nav #menu>ol>li {
+    height: inherit;
+    position: relative;
+    box-sizing: border-box;
+}
+
+nav #menu a {
+    display: block;
+    text-decoration: none;
+    color: #2D2E32;
+}
+
+nav #menu>ol>li>a {
+    height: inherit;
+    padding: 0 20px 0 20px;
+    text-align: center;
+    line-height: 80px;
+}
+
+nav #menu ol ol {
+    position: absolute;
+    flex-direction: column;
+    height: auto;
+    display: none;
+    background-color: #FCFDFD;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+}
+
+nav #menu ol ol a {
+    padding: 10px 20px;
+}
+
+nav #menu>ol>li:hover {
+    border-bottom: 2px solid #4F59A6;
+}
+
+nav #menu ol ol li:hover a {
+    color: #4F59A6;
+}
+
+nav #menu ol li:hover ol {
+    display: block;
 }
