--- a/style.css
+++ b/style.css
@@ -1,89 +1,6 @@
-body, html {
+body,
+html {
     background-color: #eee;
-}
-
-.card {
-    background: #fff;
-    border-radius: 2px;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
-}
-
-nav {
-    position: absolute;
-    width: 100%;
-    font-family: "Roboto", sans-serif;
-    z-index: 1000;
-    height: 80px;
-    background-color: #FCFDFD ;
-}
-
-nav .wrapper {
-    display: flex;
-    justify-content: space-between;
-}
-
-nav #menu {
-    height: inherit;
-}
-
-nav #logo i{
-    position: relative;      
-    top: 50%;
-    transform: translateY(-50%);
-    color: #2D2E32;
-    font-size: 30px;
-}
-
-nav #menu ol {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-    display: flex;
-    height: inherit;
-}
-
-nav #menu > ol > li {
-    height: inherit;
-    position: relative;
-    box-sizing: border-box;
-}
-
-nav #menu a {
-    display: block;
-    text-decoration: none;
-    color: #2D2E32;
-}
-
-nav #menu > ol > li > a {
-    height: inherit;
-    padding: 0 20px 0 20px;
-    text-align: center;
-    line-height: 80px;
-}
-
-nav #menu ol ol {
-    position: absolute;
-    flex-direction: column;
-    height: auto;
-    display: none;    
-    background-color: #FCFDFD;
-    box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
-}
-
-nav #menu ol ol a {
-    padding: 10px 20px;
-}
-
-nav #menu > ol > li:hover {
-    border-bottom: 2px solid #4F59A6;
-}
-
-nav #menu ol ol li:hover a {
-    color: #4F59A6;
-}
-
-nav #menu ol li:hover ol{
-    display: block;
 }
 
 header {
@@ -100,27 +17,30 @@ header {
     position: absolute;
     height: 50px;
     color: #fff;
-    bottom: 150px;
+    bottom: 80px;
     margin-left: 50%;
-    transform: translateX(-50%);  
+    transform: translateX(-50%);
     width: 600px;
+    border: 1px solid #fff;
+    border-radius: 2px;
+    height: auto;
 }
 
 #contact div {
     display: flex;
     text-align: center;
     flex-direction: column;
+    padding: 10px;
 }
 
 #contact i {
     font-size: 25px;
-    padding: 20px;
+    padding-bottom: 20px;
 }
 
 #contact span {
     font-size: 15px;
 }
-
 
 #over-ons .card {
     height: 300px;
@@ -136,9 +56,7 @@ header {
     width: 100%;
 }
 
-
 footer {
     background-color: #bdc3c7;
     height: 300px;
 }
-
