--- a/bikenation.css
+++ b/bikenation.css
@@ -48,6 +48,7 @@ span, li, a, p {
     font-family: "Open Sans", sans-serif;
     font-weight: 300;
     font-size: 15px;
+    margin: 0;
 }
 
 p + p {
