--- a/bikenation.css
+++ b/bikenation.css
@@ -66,13 +66,18 @@ a{
     box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
+.nav-filler {
+    height: 80px;
+}
+
 nav {
-    position: absolute;
+    position: fixed;
     width: 100%;
     font-family: "Roboto", sans-serif;
     z-index: 1000;
     height: 80px;
     background-color: #FCFDFD;
+    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
 }
 
 nav .wrapper {
