--- a/bikenation.css
+++ b/bikenation.css
@@ -29,6 +29,12 @@ body>*:not(footer):not(nav) {
     width: 33.333%;
 }
 
+ul, ol {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
 h1 {
     font-family: "Roboto", sans-serif;
     font-weight: 700;
@@ -147,4 +153,66 @@ nav #menu ol ol li:hover a {
 
 nav #menu ol li:hover ol {
     display: block;
+}
+
+#topfooter {
+    height: 250px;
+    background-color: rgb(45, 46, 50);
+}
+
+#topfooter .wrapper {
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+}
+
+#follow {
+    text-align: center;
+}
+
+.column {
+    margin-top: 50px;
+}
+
+#bottomfooter {
+    height: 50px;
+    background-color: rgb(27, 27, 29);
+}
+
+#bottomfooter p {
+    color: rgb(217, 214, 214);
+    text-align: center;
+    line-height: 50px;
+    font-style: italic;
+}
+
+ul li {
+    padding: 5px;
+    font-family: 'Raleway', sans-serif;
+}
+
+.circle {
+    background-color: white;
+    border-radius: 100%;
+    width: 45px;
+    height: 45px;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+    line-height: 1;
+    font-size: 25px;
+    position: relative;
+    overflow: hidden;
+    display: inline-block;
+    margin-right: 5px;
+}
+
+.circle i {
+    position: absolute;
+    left: 0;
+    top: 70%;
+    height: 100%;
+    width: 100%;
+    text-align: center;
+    margin-top: -22px;
+    overflow: hidden;
+    color: rgb(79, 89, 166);
 }
