--- a/style.css
+++ b/style.css
@@ -59,3 +59,11 @@ footer {
     background-color: #bdc3c7;
     height: 300px;
 }
+
+@media screen and (min-width: 480px) {
+
+}
+
+@media screen and (min-width: 1024px) {
+    
+}
