--- a/css/bikenation.css
+++ b/css/bikenation.css
@@ -199,14 +199,24 @@ nav #menu ol li:hover ol {
 }
 
 header {
-    top: 0;
     position: relative;
+    background-attachment: fixed;
+    background-position: center center;
+    background-size: cover;
+}
+
+header .text {
+    position: relative;
+    text-align: center;
+    top: 50%;
+    transform: translateY(-50%);
+    color: white;
 }
 
 .small-header {
     height: 500px;
-    background-color: #D9D6D6;
     margin-bottom: 0;
+    background-color: red;
 }
 
 #topfooter {
