--- a/css/bikenation.css
+++ b/css/bikenation.css
@@ -208,6 +208,11 @@ header {
     margin-bottom: 0;
 }
 
+footer ul {
+    list-style-type: none;
+    padding: 0;
+}
+
 #topfooter {
     background-color: rgb(45, 46, 50);
 }
@@ -295,7 +300,7 @@ ul li {
     height: 80px;
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
     line-height: 1;
-    font-size: 40px;
+    font-size: 35px;
     position: relative;
     overflow: hidden;
     display: inline-block;
@@ -305,7 +310,7 @@ ul li {
 .circle-big i {
     position: absolute;
     left: 0;
-    top: 50%;
+    top: 55%;
     height: 100%;
     width: 100%;
     text-align: center;
