--- a/css/contact.css
+++ b/css/contact.css
@@ -28,7 +28,7 @@ body {
 }
 
 form {
-    padding: 25px;
+    padding: 35px;
     background-color: white;
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
@@ -149,7 +149,13 @@ aside {
     color: white;
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 660px) {
+    aside, .form {
+        width: 100%;
+    }
+}
+
+@media screen and (max-width: 1024px) and (min-width: 660px) {
     aside, .form {
         width: 100%;
     }
