--- a/css/bikenation.css
+++ b/css/bikenation.css
@@ -15,17 +15,17 @@ body>*:not(footer):not(nav) {
     justify-content: space-between;
 }
 
-.row > div {
+.row>div {
     padding: 4px;
-    box-sizing: border-box; 
+    box-sizing: border-box;
     word-wrap: break-word;
 }
 
-.row-4 > *{
+.row-4>* {
     width: 25%;
 }
 
-.row-3 > *{
+.row-3>* {
     width: 33.333%;
 }
 
@@ -39,19 +39,24 @@ h2 {
     font-weight: normal;
 }
 
-h1, h2 {
+h1,
+h2 {
     margin: 0;
     margin-bottom: 20px;
 }
 
-span, li, a, p, label {
+span,
+li,
+a,
+p,
+label {
     font-family: "Open Sans", sans-serif;
     font-weight: 300;
     font-size: 15px;
     margin: 0;
 }
 
-p + p {
+p+p {
     margin: 0;
     margin-bottom: 10px;
 }
@@ -76,7 +81,7 @@ nav {
     height: 80px;
     width: 100%;
     background-color: #FCFDFD;
-    box-shadow: 0 1px 3px rgba(0,0,0,0.12), 0 1px 2px rgba(0,0,0,0.24);
+    box-shadow: 0 1px 3px rgba(0, 0, 0, 0.12), 0 1px 2px rgba(0, 0, 0, 0.24);
 }
 
 nav .wrapper {
@@ -93,16 +98,16 @@ nav #logo i {
 }
 
 nav #menu input {
-   display: none;
+    display: none;
 }
 
-nav #menu input:checked ~ ol {
+nav #menu input:checked~ol {
     display: flex;
 }
 
 nav #menu label {
     line-height: 80px;
-    cursor: pointer;    
+    cursor: pointer;
 }
 
 nav ol {
@@ -118,8 +123,8 @@ nav #menu ol {
     background-color: #FCFDFD;
     position: absolute;
     width: 100%;
-    top: 80px;  
-    left: 0;    
+    top: 80px;
+    left: 0;
 }
 
 nav #menu>ol>li {
@@ -155,7 +160,7 @@ nav #menu ol ol a {
     text-align: center;
 }
 
-nav #menu>ol>li:hover>a{
+nav #menu>ol>li:hover>a {
     background-color: #F7F7F7;
     text-decoration: underline;
     color: #4F59A6;
@@ -169,15 +174,12 @@ nav #menu ol li:hover ol {
     display: block;
 }
 
-@media screen and (min-width: 480px) {
-
-}
+@media screen and (min-width: 480px) {}
 
 @media screen and (min-width: 1024px) {
-    nav input + label {
+    nav input+label {
         display: none;
     }
-
     nav #menu>ol {
         position: relative;
         display: flex;
@@ -185,14 +187,12 @@ nav #menu ol li:hover ol {
         background-color: transparent;
         top: 0px;
     }
-
     nav #menu ol ol {
         position: absolute;
         top: 80px;
         width: auto;
     }
-
-    nav #menu ol ol a{
+    nav #menu ol ol a {
         text-align: left;
         padding: 20px 30px;
     }
@@ -219,13 +219,14 @@ header .text {
     background-color: red;
 }
 
-footer ul {
-    list-style-type: none;
-    padding: 0;
-}
-
 #topfooter {
     background-color: rgb(45, 46, 50);
+    text-align: center;
+}
+
+#topfooter ul {
+    list-style-type: none;
+    padding: 0;
 }
 
 #topfooter h2 {
@@ -243,17 +244,14 @@ footer ul {
 
 #topfooter .wrapper {
     display: flex;
-    flex-direction: row;
-    justify-content: space-between;
-}
-
-#follow {
+    flex-direction: column;
+    justify-content: center;
     text-align: center;
 }
 
 .column {
-    margin-top: 50px;
-    margin-bottom: 50px;
+    margin-top: 25px;
+    margin-bottom: 25px;
 }
 
 #bottomfooter {
@@ -276,6 +274,13 @@ footer ul {
 ul li {
     padding: 5px;
     font-family: 'Raleway', sans-serif;
+}
+
+@media screen and (min-width: 480px) {
+    #topfooter .wrapper {
+        flex-direction: row;
+        justify-content: space-between;
+    }
 }
 
 .circle {
