--- a/css/contact.css
+++ b/css/contact.css
@@ -22,7 +22,7 @@ body {
 
 .form {
     position: relative;
-    width: 60%;  
+    width: 100%;
     padding: 25px;
     box-sizing: border-box;
 }
@@ -33,19 +33,19 @@ form {
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
 
-#form li {
+ul li {
     padding: 0;
     display: block;
     list-style: none;
     margin: 10px 0 0 0;
 }
 
-#form li div {
+form ul li div {
     display: inline-block;
 }
 
-#form input[type=text], 
-#form input[type=email],
+form ul input[type=text], 
+form ul input[type=email],
 textarea {
     box-sizing: border-box;
     -webkit-box-sizing: border-box;
@@ -61,8 +61,8 @@ textarea {
     resize: none;
 }
 
-#form input[type=text]:focus, 
-#form input[type=email]:focus,
+form ul input[type=text]:focus, 
+form ul input[type=email]:focus,
 textarea:focus {
     -moz-box-shadow: 0 0 8px rgb(79, 89, 166);
     -webkit-box-shadow: 0 0 8px rgb(79, 89, 166);
@@ -70,33 +70,33 @@ textarea:focus {
     border: 1px solid rgb(79, 89, 166);
 }
 
-#form #bericht {
+form ul #bericht {
     width: 100%;
     height: 100px;
 }
 
-#form label{
+form ul label{
     margin:0 0 3px 0;
     padding:0px;
     display:block;
     font-weight: bold;
 }
 
-#form {
+form ul {
     margin: 0 auto;
     padding: 0;
     max-width: 600px;
     font: 13px 'Raleway', sans-serif;
 }
 
-#form input[type=submit], .form-style-1 input[type=button]{
+form ul input[type=submit], .form-style-1 input[type=button]{
     background: rgb(79, 89, 166);
     padding: 8px 15px 8px 15px;
     border: none;
     color: #fff;
 }
 
-#form input[type=submit]:hover, .form-style-1 input[type=button]:hover{
+form ul input[type=submit]:hover, .form-style-1 input[type=button]:hover{
     background: rgb(70, 78, 136);
     box-shadow:none;
     -moz-box-shadow:none;
@@ -110,8 +110,9 @@ label span {
 aside {
     display: flex;
     flex-direction: column;
-    width: 30%;
-    padding:25px;
+    width: 100%;
+    padding: 25px;
+    margin-top: 30px;
 }
 
 .contact-card:nth-child(1) {
@@ -126,22 +127,17 @@ aside {
     box-shadow: 0 10px 20px rgba(0,0,0,0.19), 0 6px 6px rgba(0,0,0,0.23);
 }
 
-.contact-card .card-title {
-    text-align: center;
-    padding-top: 50px;
-}
-
 .contact-card .content {
     text-align: center;
-    margin-top: 30px;
+    margin-top: 50px;
 }
 
 .circle-big {
     background-color: rgb(79, 89, 166);
     position: absolute;
     margin: 0 auto;
-    margin-left: 50%;
-    transform: translateX(-50%);
+    left: 0;
+    right: 0;
     margin-top: -40px;
 }
 
@@ -149,22 +145,13 @@ aside {
     color: white;
 }
 
-@media screen and (max-width: 660px) {
-    aside, .form {
-        width: 100%;
-    }
-}
-
-@media screen and (max-width: 1024px) and (min-width: 660px) {
-    aside, .form {
-        width: 100%;
-    }
-
+@media screen and (min-width: 1024px) {
     aside {
-        flex-direction: row;
+        width: 30%;
+        margin: 0;
     }
 
-    .contact-card:first-child {
-        margin-right: 20px;
+    .form {
+        width: 60%;
     }
 }
