--- a/css/bikenation.css
+++ b/css/bikenation.css
@@ -316,6 +316,10 @@ ul li {
         flex-direction: row;
         justify-content: space-between;
     }
+
+    .outside {
+        text-align: left;s
+    }
 }
 
 .circle {
