--- a/css/contact.css
+++ b/css/contact.css
@@ -1,5 +1,5 @@
 header {
-  background-image:   url("../Contact.jpg");
+  background-image:   url("../images/Contact.jpg");
 }
 
 .page-content .wrapper {
