--- a/css/bikenation.css
+++ b/css/bikenation.css
@@ -95,6 +95,7 @@ a {
     cursor: pointer;
     transition: all 0.5s cubic-bezier(.25,.8,.25,1);
     font-weight: normal;
+    margin-top: 20px;
 }
 
 .button.purple {
