--- a/css/fietsen.css
+++ b/css/fietsen.css
@@ -46,6 +46,20 @@ table td:last-child {
     padding-right: 10px;
 }
 
+.title{
+    display: flex;
+    justify-content: space-between;
+    margin-bottom: 20px;
+}
+
+.title h1,h2{
+    margin-bottom: 0;
+}
+
+.title h2{
+   color: rgb(79, 89, 166);
+}
+
 .review {
     display: flex;
 }
