--- a/css/about.css
+++ b/css/about.css
@@ -1,3 +1,8 @@
+header {
+    background-image: url(http://www.barryovereem.com/wp-content/uploads/SHTT-Lead-Image-Costumes.jpg);
+    background-position: center center;
+}
+
 .about {
     width: 100%;
     background-color: white;
@@ -7,16 +12,82 @@
 
 .content {
     position: relative;
-    width: 100%;
     display: flex;
-    justify-content: space-between;
-    padding: 35px;
+    justify-content: center;
+    flex-flow: column;
+    padding: 15px 35px 35px 35px;
+}
+
+.content h1 {
+    text-align: left;
+    margin-top: 25px;
+    font-weight: 700;
+}
+
+.content h1:after {
+    content: "";
+    display: block;
+    width: 50px;
+    height: 3px;
+    margin-top: 5px;
+    background-color: black;
+    border-radius: 3px;
 }
 
 .person {
-    width: 45%;
+    width: 100%;
     margin: 0;
     padding: 0;
+    padding-top: 30px;
+    text-align: left;
+    display: flex;
+    flex-flow: column;
+}
+
+.person div {
+    margin-top: 10px;
+}
+
+.person img {
+    width: 200px;
+    height: 250px;
+}
+
+@media screen and (min-width: 480px) {
+    .content {
+        flex-flow: column wrap;
+        justify-content: space-between;
+    }
+
+    .person {
+        width: 100%;
+        flex-flow: row;
+    }
+
+    .person h2,p {
+        padding-left: 10px;
+    }
+
+    .person div {
+        margin: 0;
+    }
+}
+
+@media screen and (min-width: 1024px) {
+    .content {
+        flex-flow: row wrap;
+        justify-content: space-between;
+    }
+
+    .group {
+        display: flex;
+        flex-flow: row wrap;
+        justify-content: space-between;
+    }
+
+    .person {
+        width: 45%;
+    }
 }
 
 .circle-big {
